--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,20 @@
+:root {
+  --top: 128px;
+}
+
 .characterEditor {
-  padding-top: 128px;
-  padding-bottom: 64px;
+  padding-top: var(--top);
+  padding-bottom: calc(var(--top) / 2);
 }
 
 .maxWidthWrapper {
+  /* create stacking context to overlap grayDecor */
+  position: relative;
 }
 
 .header {
-  padding-bottom: 64px;
+  padding-bottom: calc(var(--top) / 2);
+  width: 65%;
 }
 
 .title {
@@ -24,7 +31,53 @@
 }
 
 .characterWrapper {
+  --min-w: 200px;
+  position: fixed;
+  left: 60%;
+  top: 0;
+  min-width: var(--min-w);
+  width: clamp(var(--min-w), 50vh, 600px);
+  top: var(--top);
 }
 
 .controlColumn {
+  width: 50%;
+}
+
+.grayDecor {
+  background-color: hsl(195deg, 20%, 86%);
+  height: 40%;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  /* z-index: -1; */
+}
+
+@media (max-width: 600px) {
+  .characterWrapper {
+    position: relative;
+    top: 0;
+    height: 80vh;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .controlColumn {
+    --inline: 24px;
+    position: absolute;
+    left: var(--inline);
+    right: var(--inline);
+    display: flex;
+    gap: 24px;
+    bottom: 80px;
+    overflow-x: auto;
+    width: auto;
+    z-index: 1; /* stay on top of character */
+  }
+
+  .controlColumn > * {
+    max-width: 70%; /* keep some space for the next item */
+    overflow-x: auto;
+    flex-shrink: 0;
+  }
 }
